--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <head><title>CI+CD Site</title></head>
 <body style="text-align:center;">
-  <h1 style="color:blue;">✅ DevOps CI/CD Project by Santosh</h1>
+  <h1 style="color:blue;">✅ DevOps CI+CD Project by Santosh</h1>
 </body>
 </html>
